--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
+		"firebase": "^10.8.1",
+		"firebase-admin": "^12.0.0",
 		"mongodb": "^6.5.0"
 	},
 	"devDependencies": {
